--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
     "rewrites": [
         {
+            "source": "/api/tmdb/(.*)",
+            "destination": "/api/proxy?path=$1"
+        },
+        {
+            "source": "/api/rapid/(.*)",
+            "destination": "/api/rapid_proxy?path=$1"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
