--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "refresh": "tsx scripts/refresh-db.ts"
+    "refresh": "tsx scripts/refresh-db.ts",
+    "server": "cross-env PORT=3001 tsx server/index.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
-    "dotenv": "^16.4.7",
     "@tanstack/react-query": "^5.90.16",
     "@types/canvas-confetti": "^1.9.0",
+    "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
+    "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^5.2.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -26,6 +31,8 @@
     "@eslint/js": "^9.39.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -36,10 +43,10 @@
     "globals": "^16.5.0",
     "jsdom": "^27.4.0",
     "supabase": "^2.70.5",
+    "tsx": "^4.19.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "vitest": "^4.0.16",
-    "tsx": "^4.19.1"
+    "vitest": "^4.0.16"
   }
 }
