added backup keys

--- a/.env copy.example
+++ b/.env copy.example
@@ -1,4 +1,6 @@
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 VITE_TMDB_API_KEY=
-VITE_RAPIDAPI_KEY=
+VITE_WATCHMODE_API_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+VITE_RAWG_API_KEY=
